--- a/public/style/style.css
+++ b/public/style/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 h1 {
+  margin-top: 60px;
   color: #ffcc00;
   text-shadow: 2px 2px #000000;
   font-size: 3em;
@@ -27,16 +28,8 @@ h2 {
   color: #0a0a23;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 10px 0;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1000; /* Ensure header stays above other content */
+div {
+  margin: 10px;
 }
 
 /* Canvas and Modal styling */
@@ -44,7 +37,11 @@ header {
 canvas {
   border: 2px solid #000;
   background-color: #fff;
+  width: 45%;
+  border: 10px solid #ffcc00;
+  margin: 10px;
 }
+
 .modal {
   display: none; /* Hidden by default */
   position: fixed;
@@ -73,10 +70,30 @@ canvas {
 /* Button Styles */
 
 button {
-  padding: 10px 20px;
+  background-image: linear-gradient(to right, #0072ff, #00c6ff);
+  border: none;
+  color: white;
+  padding: 15px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
   font-size: 16px;
+  margin: 10px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  width: 300px;
+  font-family: "Press Start 2P", cursive;
+}
+
+button:hover {
+  background-image: linear-gradient(to right, #00c6ff, #0072ff);
+  transform: translateY(-2px);
+}
+
+button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2px #666;
 }
 
 #enterButton {
@@ -100,6 +117,7 @@ button {
   color: white;
   border-radius: 5px;
 }
+
 #resumeButton {
   display: block;
   margin-top: 5px;
