--- a/public/style/viewer.css
+++ b/public/style/viewer.css
@@ -21,3 +21,37 @@ div {
     margin: 10px;
 }
 
+canvas {
+  border: 2px solid #000;
+  background-color: #fff;
+  width: 50%;
+  border: 10px solid #ffcc00;
+  margin: 10px;
+}
+
+button {
+    background-image: linear-gradient(to right, #0072ff, #00c6ff);
+    border: none;
+    color: white;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+    width: 300px;
+    font-family: "Press Start 2P", cursive;
+  }
+
+button:hover {
+  background-image: linear-gradient(to right, #00c6ff, #0072ff);
+  transform: translateY(-2px);
+}
+
+button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2px #666;
+}
