--- a/public/style/style.css
+++ b/public/style/style.css
@@ -33,14 +33,14 @@ div {
 }
 
 /* Canvas and Modal styling */
-
+/* 
 canvas {
   border: 2px solid #000;
   background-color: #fff;
   width: 45%;
   border: 10px solid #ffcc00;
   margin: 10px;
-}
+} */
 
 .modal {
   display: none; /* Hidden by default */
