--- a/public/style/viewer.css
+++ b/public/style/viewer.css
@@ -21,6 +21,12 @@ div {
     margin: 10px;
 }
 
+#canvas-container{
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
 canvas {
   border: 2px solid #000;
   background-color: #fff;
