--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
   font-family: "Press Start 2P", "Courier New", Courier, "Lucida Console",
     monospace;
@@ -17,7 +17,7 @@ body {
 }
 
 h1 {
-  margin-top: 60px;
+  margin-top: 30px;
   color: #ffcc00;
   text-shadow: 2px 2px #000000;
   font-size: 3em;
@@ -33,20 +33,27 @@ div {
 }
 
 /* Canvas and Modal styling */
+#timer {
+  margin: 20px;
+}
 
 #canvas-container{
-  width: 100vw;
+  width: 80%;
+  /* height: 80vh; */
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-left: 700px;
 }
 
 canvas {
-  border: 2px solid #000;
-  background-color: #fff;
-  border: 10px solid #ffcc00;
+  width: 100%;
+  height: 100%;
+  /* border: 2px solid #000; */
+  /* background-color: #fff; */
+  /* border: 10px solid #ffcc00; */
   margin: 10px;
 }
-
 .modal {
   display: none; /* Hidden by default */
   position: fixed;
